@@ -4,6 +4,9 @@
 	rules (http://www.fsf.org/licensing/licenses/gpl-howto.html).
 	* dcc-address.*: Basic functions to map address/port values
 	between NMRA and Lenz-DCC address scheme added.
+	* ddl.c, ddl-s88.c, hsi-88.c, i2c-dev.c, ib.c, li100.c,
+	loconet.c, loopback.c, m605x.c, selectrix.c, zimo.c,
+	config-srcpd.c: Harmonized usage of "comment" tag.
 
 2009-01-26 Guido Scholz <guido.scholz@bayernline.de>
 	* loopback.c: Cleaner design for bus thread event loop applied.
